fix: resolve Java 17+ compatibility issues for Java 17 compilation
- Replace List.of() with Arrays.asList() in Map.java (Java 9+ feature)
- Remove java.io.Serial import from Edge.java and Sector.java (Java 14+ annotation)
- Replace .getFirst() with .get(0) in Main.java and PersistenceTester.java (Java 21+ method)
- Fix UTF-8 BOM encoding issues in Main.java and PersistenceTester.java

These changes ensure the project compiles with JDK 17 and JavaFX 21 SDK.